Backport fix: added helmoptions while querying to reposerver, use rbac of app to quey repo server
