# assets/swagger.json
@@ -2661,6 +2661,16 @@
             "type": "string",
             "name": "revision",
             "in": "query"
+          },
+          {
+            "type": "string",
+            "name": "appName",
+            "in": "query"
+          },
+          {
+            "type": "string",
+            "name": "appProject",
+            "in": "query"
           }
         ],
         "responses": {
@@ -3835,56 +3845,6 @@
         }
       }
     },
-    "repositoryKsonnetAppSpec": {
-      "type": "object",
-      "title": "KsonnetAppSpec contains Ksonnet app response\nThis roughly reflects: ksonnet/ksonnet/metadata/app/schema.go",
-      "properties": {
-        "environments": {
-          "type": "object",
-          "additionalProperties": {
-            "$ref": "#/definitions/repositoryKsonnetEnvironment"
-          }
-        },
-        "name": {
-          "type": "string"
-        },
-        "parameters": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/v1alpha1KsonnetParameter"
-          }
-        }
-      }
-    },
-    "repositoryKsonnetEnvironment": {
-      "type": "object",
-      "properties": {
-        "destination": {
-          "$ref": "#/definitions/repositoryKsonnetEnvironmentDestination"
-        },
-        "k8sVersion": {
-          "description": "KubernetesVersion is the kubernetes version the targeted cluster is running on.",
-          "type": "string"
-        },
-        "name": {
-          "type": "string",
-          "title": "Name is the user defined name of an environment"
-        }
-      }
-    },
-    "repositoryKsonnetEnvironmentDestination": {
-      "type": "object",
-      "properties": {
-        "namespace": {
-          "type": "string",
-          "title": "Namespace is the namespace of the Kubernetes server that targets should be deployed to"
-        },
-        "server": {
-          "description": "Server is the Kubernetes server that the cluster is running on.",
-          "type": "string"
-        }
-      }
-    },
     "repositoryKustomizeAppSpec": {
       "type": "object",
       "title": "KustomizeAppSpec contains kustomize images",
@@ -3951,6 +3911,9 @@
         "appName": {
           "type": "string"
         },
+        "appProject": {
+          "type": "string"
+        },
         "source": {
           "$ref": "#/definitions/v1alpha1ApplicationSource"
         }
@@ -3965,9 +3928,6 @@
         },
         "helm": {
           "$ref": "#/definitions/repositoryHelmAppSpec"
-        },
-        "ksonnet": {
-          "$ref": "#/definitions/repositoryKsonnetAppSpec"
         },
         "kustomize": {
           "$ref": "#/definitions/repositoryKustomizeAppSpec"
